# django-forbid

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: deploy.sh  index.md  package.json
docs/.vitepress/: config.js
docs/docs/: configuration.md
docs/docs/settings/: device-detection.md  index.md  location-detection.md  variables.md  vpn-detection.md
docs/integration/: configuration.md  index.md
docs/integration/settings/: index.md  variables.md
docs/public/: index.css
src/django_forbid/: access.py  apps.py  detect.py  device.py  middleware.py
src/django_forbid/skills/: __init__.py  access.py  detect.py  device.py  forbid_device.py  forbid_location.py  forbid_network.py
src/django_forbid/templates/: timezone.html
tests/: __init__.py  conftest.py  requirements.txt  test_device_access.py  test_device_middleware.py  test_grants_access.py  test_location_middleware.py  test_network_middleware.py  test_primary_middleware.py  test_vpn_detection.py
