[metadata]
name = django-forbid
version = attr: django_forbid.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Django app for forbidding access to some countries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysnippet/django-forbid
keywords =
    python
    django
    forbid
    django-forbid
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages =
    django_forbid
install_requires =
    Django>=2.1
    geoip2
include_package_data = yes
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
