[metadata]
name = django-forbid
version = attr: django_forbid.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Django app for forbidding access to some countries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysnippet/django-forbid
keywords =
    python
    django
    forbid
    django-forbid
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages =
    django_forbid
install_requires =
    Django>=2.1
    geoip2
include_package_data = yes
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
