[metadata]
name = django-forbid
version = attr: django_forbid.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Secure your Django app by controlling the access - grant or deny user access based on device and location, including VPN detection.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://docs.pysnippet.org/django-forbid/
    Source Code=https://github.com/pysnippet/django-forbid/
keywords =
    python
    django
    permit
    forbid
    access
    device
    secure
    country
    control
    security
    location
    territory
    vpn
    detection
    django-forbid
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages =
    django_forbid
    django_forbid.skills
install_requires =
    Django>=2.1
    geoip2
    device_detector
include_package_data = yes
python_requires = >=3.7
package_dir =
    =src
zip_safe = no
